Bug 1828784 - Work around VS 2019+ SDK issue. r=glandium

This is enough to prevent the undesired instantiation.

Differential Revision: https://phabricator.services.mozilla.com/D175920