js/public/GCVector.h
@@ -47,8 +47,8 @@ class GCVector {
  public:
   using ElementType = T;
 
-  explicit GCVector(AllocPolicy alloc = AllocPolicy())
-      : vector(std::move(alloc)) {}
+  explicit GCVector(AllocPolicy alloc) : vector(std::move(alloc)) {}
+  GCVector() : GCVector(AllocPolicy()) {}
 
   GCVector(GCVector&& vec) : vector(std::move(vec.vector)) {}
 
